feat: enabling form steps and validation for the first form page

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,12 @@ h1 {
   font-weight: 700;
 }
 
+@font-face {
+  font-family: Inter;
+  src: url('/fonts/Inter/Inter-Regular.ttf');
+  font-weight: 400;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
