feat: multi generator input button

--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,18 @@ h1 {
   font-weight: 400;
 }
 
+@font-face {
+  font-family: Inter;
+  src: url('/fonts/Inter/Inter-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Inter;
+  src: url('/fonts/Inter/Inter-SemiBold.ttf');
+  font-weight: 600;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
